ci: add codecov

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,3 +108,12 @@ jobs:
         run: cd ~/frappe-bench/ && bench --site test_site run-tests --app lending --coverage
         env:
           TYPE: server
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          files: /home/runner/frappe-bench/sites/coverage.xml
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: true
+          verbose: true
+
